operator/failure-diagnosis/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kw-failure-diagnosis
  labels:
    pod-security.kubernetes.io/enforce: restricted
